# Luciole

./: CMakeCache.txt  CMakeLists.txt  Config.cpp  Config.h  DisplayImage.cpp  DisplayImage.h  DisplayImageBackUp.txt  ImageParser.cpp  ImageParser.h  ImageParserMock.cpp  ImageParserMock.h  ImageProcessor.cpp  ImageProcessor.h  Instructions.md  JsonParser.cpp  JsonParser.h  LightSource.cpp  LightSource.h  Main_Stream.cpp  README.md  RenderingSimulator.cpp  RenderingSimulator.h  Room.cpp  Room.h  cmake_install.cmake  compile.sh  ideas.txt  make_execute.sh  stream.sh
CMakeLists_Configs/stream_test/: CMakeLists.txt
Config/: config.json  lightIntensity.json
nlohmann/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  nlohmann_json.sln
python_scripts/: LED_blink.py  resetIntensitiestoOrigin.py  update_LEDs.py
raspi_config/: CMakeLists.txt
raspicam_test/: CMakeLists.txt  simpletest_raspicam_cv.cpp
